gohttp-deploy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gohttp
spec:
  selector:
    app: gohttp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpgo-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: [URL]
    http:
      paths:
      - backend:
          service:
            name: gohttp
            port:
              number: 80
        path: /gohttp
        pathType: Prefix
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gohttp 
  labels:
    app: gohttp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gohttp
  template:
    metadata:
      labels:
        app: gohttp
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution: 
          - weight: 100  
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In 
                  values:
                  - gohttp
              topologyKey: kubernetes.io/hostname
      containers:
      - name: gohttp
        image: "[docker image]:[docker tag]"
        resources:
          limits:
            cpu: 500m
            memory: 500Mi
          requests:
            cpu: 50m
            memory: 100Mi
        ports:
        - containerPort: 8080
        securityContext:
          runAsUser: 1000
          runAsNonRoot: True
